syntax = "proto3";

option go_package = "./clusterpb/;clusterpb";

message PageDTO {
    int32 page = 1;
    int32 pageSize = 2;
    int32 total = 3;
}

message ResponseStatusDTO {
    int32 code = 1;
    string message = 2;
}

message UsageDTO {
    float total = 1;
    float used = 2;
    float usageRate = 3;
}

message OperatorDTO {
    string id = 1;
    string name = 2;
    string tenantId = 3;
    bool manualOperator = 4;
}

message DisplayStatusDTO {
    string statusCode = 1;
    string statusName = 2;
    int32 inProcessFlowId = 3;
    int64 createTime = 4;
    int64 updateTime = 5;
    int64 deleteTime = 6;
}